fix overflow on small screens

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -192,3 +192,7 @@ x-ref-heading .ref-heading-label {
 html {
     scroll-behavior: smooth;
 }
+
+article {
+    min-width: 0;
+}
